# agentkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  nightly-pikkolo.yml  release.yml
docs/: architecture.md  concepts.md  index.md  recipes.md  reference.md
examples/minimal/: README.md  main.py
examples/with_mcp_tools/: README.md  echo_server.py  main.py
scripts/: bootstrap.sh
src/agentkit/: __init__.py  _content.py  _ids.py  _logging.py  _messages.py  _stream_trace.py  config.py  continuation.py  envelope.py  errors.py  finalize_validator.py  metrics.py  session.py
src/agentkit/codeexec/: __init__.py  errors.py  executor.py  limits.py  namespace.py  validator.py
src/agentkit/events/: __init__.py  approval.py  base.py  goal.py  lifecycle.py  phase.py  streaming.py  subagent.py  tool.py
src/agentkit/guards/: __init__.py  approval.py  finalize.py  intent.py  success_claim.py
src/agentkit/loop/: context.py  message_builder.py  orchestrator.py  phase.py  stream_mux.py  tool_dispatcher.py  turn_end.py
src/agentkit/mcp_client/: __init__.py  base.py  inprocess.py  stdio.py
src/agentkit/providers/: __init__.py  base.py  caching.py  fakes.py
src/agentkit/resources/: __init__.py  entity.py  namespace.py  registry.py  (+3 more)
tests/: conftest.py
tests/contract/: conftest.py  test_anthropic_real_client.py  test_openrouter_real_client.py
tests/e2e/: test_approval_resume.py  test_approval_resume_batch.py  test_continuation_loop.py  test_loop_approval_suspend.py  test_loop_text_only.py  test_loop_tool_call.py
tests/integration/: conftest.py
tests/providers/: test_usage_event_fields.py
tests/unit/: test_config.py  test_content.py  test_continuation_module.py  test_coverage_uplift.py  test_ids.py  test_messages.py  test_metrics.py  test_session.py  test_session_goal_methods.py  test_session_selector_xor.py  test_session_subagent_wiring.py  test_smoke.py  test_stream_trace.py  test_tool_selector_hook.py
tests/wire/: _snapshot_helper.py  test_event_snapshots.py
(+176 files in other folders)
