[project]
name = "agentkit"
version = "0.1.0"
description = "Domain-blind agent runtime with provider abstraction, MCP tool boundary, and pluggable guards."
requires-python = ">=3.12"
license = { text = "Proprietary - All Rights Reserved" }
authors = [{ name = "Morten Gulden" }]
readme = "README.md"

dependencies = [
    "anthropic>=0.40",
    "openai>=1.50",
    "mcp>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "redis>=5.0",
    "python-ulid>=2.0",
    "structlog>=24",
    "httpx>=0.27",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.115", "websockets>=13"]
vector  = ["redis[hiredis]>=5.0"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "hypothesis>=6.100",
    "vcrpy>=6",
    "testcontainers[redis]>=4",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "pre-commit>=3.7",
    "pip-audit>=2.7",
    "bandit>=1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentkit"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PIE", "RUF", "PL", "TCH"]
ignore = ["PLR0913"]   # too-many-arguments — false positive on Pydantic-heavy APIs

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]   # magic-numbers OK in tests

[tool.pyright]
include = ["src/agentkit", "tests"]
strict = ["src/agentkit"]
pythonVersion = "3.12"
reportMissingImports = "error"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers --strict-config -ra"
markers = [
    "integration: requires real services (Redis, etc.)",
    "e2e: full session flows",
]

[tool.coverage.run]
source = ["src/agentkit"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
